[gd_scene load_steps=42 format=2]

[ext_resource path="res://Scenes/Levels/Level_3/Level_Logic.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Countdown.gd" type="Script" id=2]
[ext_resource path="res://Game.gd" type="Script" id=3]
[ext_resource path="res://Scripts/GameCamera.gd" type="Script" id=4]
[ext_resource path="res://Scripts/Paralax_Sprite.gd" type="Script" id=5]
[ext_resource path="res://Images/Level_3/discolight.png" type="Texture" id=6]
[ext_resource path="res://Images/Level_3/background.jpg" type="Texture" id=7]
[ext_resource path="res://Images/lights/flash_light.png" type="Texture" id=8]
[ext_resource path="res://Images/floor.png" type="Texture" id=9]
[ext_resource path="res://Scenes/TransitionMask.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/Menues/Pause_Menu/Pause_Menu.tscn" type="PackedScene" id=11]
[ext_resource path="res://Retrophile Regular.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://Images/ui/pixel.png" type="Texture" id=13]
[ext_resource path="res://Scenes/Weapons/ProjectileWeapons/Flame_Thrower/F_T_Dummy.tscn" type="PackedScene" id=14]
[ext_resource path="res://Scenes/Weapons/ProjectileWeapons/Machine_Gun/M_G_Dummy.tscn" type="PackedScene" id=15]
[ext_resource path="res://Scenes/Weapons/ProjectileWeapons/Granade_Launcher/G_L_Dummy.tscn" type="PackedScene" id=16]
[ext_resource path="res://Scenes/Weapons/ProjectileWeapons/Shot_Gun/Shot_Gun_Dummy.tscn" type="PackedScene" id=17]
[ext_resource path="res://Scenes/Weapons/ProjectileWeapons/Laser_Gun/Laser_Gun_Dummy.tscn" type="PackedScene" id=18]
[ext_resource path="res://Scenes/Assets/Moving_Platform/Moving_Platform.tscn" type="PackedScene" id=19]
[ext_resource path="res://Scenes/Assets/Door/Door.tscn" type="PackedScene" id=20]

[sub_resource type="OccluderPolygon2D" id=1]
polygon = PoolVector2Array( 100, 100, 0, 100, 0, 0, 100, 0 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 100, 100, 0, 100, 0, 0, 100, 0 )

[sub_resource type="TileSet" id=3]
0/name = "floor.png 0"
0/texture = ExtResource( 9 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 100, 100 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/occluder = SubResource( 1 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 2 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="DynamicFont" id=4]
size = 150
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=5]
size = 100
font_data = ExtResource( 12 )

[sub_resource type="Animation" id=6]
resource_name = "spin"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="Animation" id=7]
resource_name = "spin"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="Animation" id=8]
resource_name = "spin"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="Animation" id=9]
resource_name = "spin"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="Animation" id=10]
resource_name = "spin"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="Animation" id=11]
resource_name = "spin"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="Animation" id=12]
resource_name = "spin"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="Animation" id=13]
resource_name = "spin"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="Animation" id=14]
resource_name = "spin"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="Animation" id=15]
resource_name = "spin"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="Animation" id=16]
resource_name = "spin"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="Animation" id=17]
resource_name = "spin"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="Environment" id=18]
background_mode = 4
glow_enabled = true
glow_levels/1 = true
glow_intensity = 3.0
glow_bloom = 0.2
glow_blend_mode = 1
glow_hdr_luminance_cap = 1.0
glow_bicubic_upscale = true
adjustment_enabled = true
adjustment_contrast = 1.3
adjustment_saturation = 1.75

[sub_resource type="Animation" id=19]
resource_name = "spin"
length = 24.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 24 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="Animation" id=20]
resource_name = "spin"
length = 24.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 24 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -360.0 ]
}

[sub_resource type="Animation" id=21]
resource_name = "move_r"
length = 6.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5 ),
"transitions": PoolRealArray( 2.37841, 0.482968, 1, 2.07053, 0.482968, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 250, 0 ), Vector2( 500, 0 ), Vector2( 500, 0 ), Vector2( 250, 0 ), Vector2( 0, 0 ) ]
}

[node name="Game" type="Node2D"]
script = ExtResource( 3 )
level_boundury_radius = 4500

[node name="Players" type="Node2D" parent="."]

[node name="TileMap" type="TileMap" parent="."]
z_index = -100
tile_set = SubResource( 3 )
cell_size = Vector2( 100, 100 )
format = 1
tile_data = PoolIntArray( -917509, 0, 0, -917508, 0, 0, -917507, 0, 0, -917506, 0, 0, -917505, 0, 0, -983040, 0, 0, -983039, 0, 0, -983038, 0, 0, -983037, 0, 0, -983036, 0, 0, -983033, 0, 0, -983032, 0, 0, -983031, 0, 0, -983030, 0, 0, -983029, 0, 0, -983028, 0, 0, -983027, 0, 0, -983026, 0, 0, -983025, 0, 0, -983024, 0, 0, -786443, 0, 0, -786442, 0, 0, -786441, 0, 0, -851948, 0, 0, -851947, 0, 0, -851946, 0, 0, -655365, 0, 0, -655364, 0, 0, -655363, 0, 0, -655362, 0, 0, -655361, 0, 0, -720896, 0, 0, -720895, 0, 0, -720894, 0, 0, -720893, 0, 0, -720892, 0, 0, -720889, 0, 0, -720888, 0, 0, -720887, 0, 0, -720886, 0, 0, -720885, 0, 0, -720884, 0, 0, -720883, 0, 0, -720882, 0, 0, -720881, 0, 0, -720880, 0, 0, -589829, 0, 0, -655344, 0, 0, -524303, 0, 0, -524302, 0, 0, -524301, 0, 0, -524300, 0, 0, -524296, 0, 0, -524295, 0, 0, -524294, 0, 0, -524293, 0, 0, -589808, 0, 0, -589807, 0, 0, -589806, 0, 0, -589805, 0, 0, -589801, 0, 0, -589800, 0, 0, -589799, 0, 0, -589798, 0, 0, -458767, 0, 0, -524262, 0, 0, -393231, 0, 0, -458751, 0, 0, -458750, 0, 0, -458749, 0, 0, -458748, 0, 0, -458745, 0, 0, -458744, 0, 0, -458743, 0, 0, -458742, 0, 0, -458726, 0, 0, -327695, 0, 0, -327686, 0, 0, -393215, 0, 0, -393206, 0, 0, -393199, 0, 0, -393190, 0, 0, -262159, 0, 0, -262150, 0, 0, -327679, 0, 0, -327670, 0, 0, -327663, 0, 0, -327654, 0, 0, -196623, 0, 0, -196614, 0, 0, -196613, 0, 0, -196612, 0, 0, -262143, 0, 0, -262139, 0, 0, -262138, 0, 0, -262134, 0, 0, -262130, 0, 0, -262129, 0, 0, -262128, 0, 0, -262127, 0, 0, -262118, 0, 0, -131089, 0, 0, -131088, 0, 0, -131087, 0, 0, -131086, 0, 0, -131085, 0, 0, -131081, 0, 0, -131080, 0, 0, -131079, 0, 0, -131078, 0, 0, -131077, 0, 0, -131076, 0, 0, -196593, 0, 0, -196592, 0, 0, -196591, 0, 0, -196590, 0, 0, -196589, 0, 0, -196588, 0, 0, -196584, 0, 0, -196583, 0, 0, -196582, 0, 0, -196581, 0, 0, -196580, 0, 0, -65551, 0, 0, -131046, 0, 0, -15, 0, 0, -65536, 0, 0, -65535, 0, 0, -65531, 0, 0, -65530, 0, 0, -65526, 0, 0, -65525, 0, 0, -65510, 0, 0, 65521, 0, 0, 0, 0, 0, 1, 0, 0, 10, 0, 0, 11, 0, 0, 26, 0, 0, 131055, 0, 0, 131056, 0, 0, 131057, 0, 0, 131058, 0, 0, 131059, 0, 0, 131063, 0, 0, 131064, 0, 0, 131065, 0, 0, 131066, 0, 0, 131067, 0, 0, 131068, 0, 0, 131069, 0, 0, 65536, 0, 0, 65537, 0, 0, 65546, 0, 0, 65547, 0, 0, 65550, 0, 0, 65551, 0, 0, 65552, 0, 0, 65553, 0, 0, 65554, 0, 0, 65555, 0, 0, 65556, 0, 0, 65560, 0, 0, 65561, 0, 0, 65562, 0, 0, 65563, 0, 0, 65564, 0, 0, 196593, 0, 0, 196602, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131089, 0, 0, 131098, 0, 0, 262129, 0, 0, 262138, 0, 0, 196625, 0, 0, 196634, 0, 0, 327665, 0, 0, 327674, 0, 0, 327675, 0, 0, 327676, 0, 0, 327677, 0, 0, 262158, 0, 0, 262159, 0, 0, 262160, 0, 0, 262161, 0, 0, 262170, 0, 0, 393201, 0, 0, 327684, 0, 0, 327687, 0, 0, 327706, 0, 0, 458737, 0, 0, 393220, 0, 0, 393223, 0, 0, 393242, 0, 0, 524273, 0, 0, 524274, 0, 0, 524275, 0, 0, 524276, 0, 0, 524280, 0, 0, 524281, 0, 0, 524282, 0, 0, 524283, 0, 0, 524284, 0, 0, 524285, 0, 0, 524286, 0, 0, 524287, 0, 0, 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458762, 0, 0, 458763, 0, 0, 458764, 0, 0, 458765, 0, 0, 458766, 0, 0, 458767, 0, 0, 458768, 0, 0, 458769, 0, 0, 458770, 0, 0, 458771, 0, 0, 458775, 0, 0, 458776, 0, 0, 458777, 0, 0, 458778, 0, 0, 786417, 0, 0, 786418, 0, 0, 786419, 0, 0, 786420, 0, 0, 786421, 0, 0, 786422, 0, 0, 786423, 0, 0, 786424, 0, 0, 786425, 0, 0, 786426, 0, 0, 786427, 0, 0, 786428, 0, 0, 720900, 0, 0, 720901, 0, 0, 720902, 0, 0, 720903, 0, 0, 720911, 0, 0, 720912, 0, 0, 720913, 0, 0, 720914, 0, 0, 720915, 0, 0, 720916, 0, 0, 720917, 0, 0, 720918, 0, 0, 720919, 0, 0, 720920, 0, 0, 720921, 0, 0, 720922, 0, 0 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Player_Stats" type="Node" parent="CanvasLayer"]

[node name="Pause_Menu" parent="CanvasLayer" instance=ExtResource( 11 )]
visible = false

[node name="TransitionMask" parent="CanvasLayer" instance=ExtResource( 10 )]
visible = false

[node name="Countdown" type="Label" parent="CanvasLayer"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 36.73
margin_top = -59.8565
margin_right = 36.73
margin_bottom = 90.1435
custom_fonts/font = SubResource( 4 )
align = 1
valign = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}
last_string = "GO!!"

[node name="Spawns" type="Node2D" parent="."]

[node name="Player_Spawn_1" type="Node2D" parent="Spawns"]
position = Vector2( -1276.56, 558.906 )

[node name="Player_Spawn_2" type="Node2D" parent="Spawns"]
position = Vector2( 2461.16, -465.398 )

[node name="Player_Spawn_3" type="Node2D" parent="Spawns"]
position = Vector2( -1256.08, -469.914 )

[node name="Player_Spawn_4" type="Node2D" parent="Spawns"]
position = Vector2( 2496.4, 534.781 )

[node name="Weapons" type="Node2D" parent="."]

[node name="Pistol_Dummy" parent="Weapons" instance=ExtResource( 18 )]
position = Vector2( -734.76, 625.673 )

[node name="Pistol_Dummy2" parent="Weapons" instance=ExtResource( 18 )]
position = Vector2( -754.376, -404.211 )

[node name="Pistol_Dummy3" parent="Weapons" instance=ExtResource( 18 )]
position = Vector2( 1908.61, -409.115 )

[node name="Pistol_Dummy4" parent="Weapons" instance=ExtResource( 18 )]
position = Vector2( 1918.42, 596.248 )

[node name="Pistol_Dummy5" parent="Weapons" instance=ExtResource( 15 )]
position = Vector2( -1627.33, 17.551 )

[node name="Pistol_Dummy6" parent="Weapons" instance=ExtResource( 15 )]
position = Vector2( 2786.46, -2.0658 )

[node name="Shot_Gunl_Dummy" parent="Weapons" instance=ExtResource( 17 )]
position = Vector2( 407.922, -791.644 )

[node name="Shot_Gunl_Dummy2" parent="Weapons" instance=ExtResource( 17 )]
position = Vector2( 810.067, -806.357 )

[node name="G_L_Dummy" parent="Weapons" instance=ExtResource( 14 )]
position = Vector2( 550, -250 )

[node name="Background" type="Node2D" parent="."]
modulate = Color( 0.360784, 0.360784, 0.360784, 1 )
show_behind_parent = true
position = Vector2( 582.373, -316.811 )
scale = Vector2( 1, 1.2 )
z_index = -1000

[node name="Sprite" type="Sprite" parent="Background"]
self_modulate = Color( 0.0235294, 0.0156863, 0.0588235, 1 )
scale = Vector2( 10000, 10000 )
texture = ExtResource( 13 )

[node name="Sprite3" type="Sprite" parent="Background"]
position = Vector2( -82.5607, -320.79 )
scale = Vector2( 2.5, 3 )
texture = ExtResource( 7 )
script = ExtResource( 5 )
motion_scale = Vector2( 0.3, 0.3 )
camera_path = NodePath("../../Camera")

[node name="Spikes" type="Node2D" parent="."]

[node name="Camera" type="Camera2D" parent="."]
position = Vector2( 600.466, -316.1 )
current = true
zoom = Vector2( 4.5, 4.5 )
limit_left = -1750
limit_top = -1500
limit_right = 3000
limit_bottom = 1200
smoothing_enabled = true
smoothing_speed = 10.0
editor_draw_limits = true
script = ExtResource( 4 )

[node name="FPS" type="Label" parent="Camera"]
visible = false
margin_right = 214.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 5 )
text = "test"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lights" type="Node2D" parent="."]

[node name="Light" type="Light2D" parent="Lights"]
position = Vector2( 596.947, -1233.6 )
scale = Vector2( -1, 1 )
texture = ExtResource( 8 )
offset = Vector2( 950, 0 )
texture_scale = 8.5
energy = 1.1
mode = 2
shadow_enabled = true
shadow_gradient_length = 3.0
shadow_filter = 3
shadow_filter_smooth = 10.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="Lights/Light"]
anims/spin = SubResource( 6 )

[node name="Light2" type="Light2D" parent="Lights"]
position = Vector2( -1351.15, -653.18 )
rotation = 3.29716
scale = Vector2( -1, 1 )
texture = ExtResource( 8 )
offset = Vector2( 950, 0 )
texture_scale = 8.5
energy = 1.2
mode = 2
shadow_enabled = true
shadow_gradient_length = 3.0
shadow_filter = 3
shadow_filter_smooth = 10.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="Lights/Light2"]
anims/spin = SubResource( 7 )

[node name="Light3" type="Light2D" parent="Lights"]
position = Vector2( -1291.1, -72.755 )
rotation = 3.29716
scale = Vector2( -1, 1 )
texture = ExtResource( 8 )
offset = Vector2( 950, 0 )
texture_scale = 8.5
energy = 1.2
mode = 2
shadow_enabled = true
shadow_gradient_length = 3.0
shadow_filter = 3
shadow_filter_smooth = 10.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="Lights/Light3"]
anims/spin = SubResource( 8 )

[node name="Light4" type="Light2D" parent="Lights"]
position = Vector2( -744.035, 287.509 )
rotation = 3.29716
scale = Vector2( -1, 1 )
texture = ExtResource( 8 )
offset = Vector2( 950, 0 )
texture_scale = 8.5
energy = 1.2
mode = 2
shadow_enabled = true
shadow_gradient_length = 3.0
shadow_filter = 3
shadow_filter_smooth = 10.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="Lights/Light4"]
anims/spin = SubResource( 9 )

[node name="Light5" type="Light2D" parent="Lights"]
position = Vector2( 1897.9, 300.852 )
rotation = 6.28319
scale = Vector2( -1, 1 )
texture = ExtResource( 8 )
offset = Vector2( 950, 0 )
texture_scale = 8.5
energy = 1.2
mode = 2
shadow_enabled = true
shadow_gradient_length = 3.0
shadow_filter = 3
shadow_filter_smooth = 10.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="Lights/Light5"]
anims/spin = SubResource( 10 )

[node name="Light6" type="Light2D" parent="Lights"]
position = Vector2( 2478.32, -66.0834 )
rotation = 3.29716
scale = Vector2( -1, 1 )
texture = ExtResource( 8 )
offset = Vector2( 950, 0 )
texture_scale = 8.5
energy = 1.2
mode = 2
shadow_enabled = true
shadow_gradient_length = 3.0
shadow_filter = 3
shadow_filter_smooth = 10.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="Lights/Light6"]
anims/spin = SubResource( 11 )

[node name="Light7" type="Light2D" parent="Lights"]
position = Vector2( 2511.68, -613.151 )
rotation = 3.29716
scale = Vector2( -1, 1 )
texture = ExtResource( 8 )
offset = Vector2( 950, 0 )
texture_scale = 8.5
energy = 1.2
mode = 2
shadow_enabled = true
shadow_gradient_length = 3.0
shadow_filter = 3
shadow_filter_smooth = 10.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="Lights/Light7"]
anims/spin = SubResource( 12 )

[node name="Light8" type="Light2D" parent="Lights"]
position = Vector2( 236.683, 607.743 )
rotation = 3.29716
scale = Vector2( -1, 1 )
texture = ExtResource( 8 )
offset = Vector2( 950, 0 )
texture_scale = 8.5
energy = 1.2
mode = 2
shadow_enabled = true
shadow_gradient_length = 3.0
shadow_filter = 3
shadow_filter_smooth = 10.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="Lights/Light8"]
anims/spin = SubResource( 13 )

[node name="Light9" type="Light2D" parent="Lights"]
position = Vector2( 943.868, 594.4 )
rotation = 3.29716
scale = Vector2( -1, 1 )
texture = ExtResource( 8 )
offset = Vector2( 950, 0 )
texture_scale = 8.5
energy = 1.2
mode = 2
shadow_enabled = true
shadow_gradient_length = 3.0
shadow_filter = 3
shadow_filter_smooth = 10.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="Lights/Light9"]
anims/spin = SubResource( 14 )

[node name="Light10" type="Light2D" parent="Lights"]
position = Vector2( 857.137, -453.033 )
rotation = 3.29716
scale = Vector2( -1, 1 )
texture = ExtResource( 8 )
offset = Vector2( 950, 0 )
texture_scale = 8.5
energy = 1.2
mode = 2
shadow_enabled = true
shadow_gradient_length = 3.0
shadow_filter = 3
shadow_filter_smooth = 10.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="Lights/Light10"]
anims/spin = SubResource( 15 )

[node name="Light11" type="Light2D" parent="Lights"]
position = Vector2( 336.756, 74.0192 )
rotation = 3.29716
scale = Vector2( -1, 1 )
texture = ExtResource( 8 )
offset = Vector2( 950, 0 )
texture_scale = 8.5
energy = 1.2
mode = 2
shadow_enabled = true
shadow_gradient_length = 3.0
shadow_filter = 3
shadow_filter_smooth = 10.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="Lights/Light11"]
anims/spin = SubResource( 16 )

[node name="Light12" type="Light2D" parent="Lights"]
position = Vector2( -410.457, -1240.28 )
rotation = 3.29716
scale = Vector2( -1, 1 )
texture = ExtResource( 8 )
offset = Vector2( 950, 0 )
texture_scale = 8.5
energy = 1.2
mode = 2
shadow_enabled = true
shadow_gradient_length = 3.0
shadow_filter = 3
shadow_filter_smooth = 10.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="Lights/Light12"]
anims/spin = SubResource( 17 )

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color( 0.235294, 0.235294, 0.235294, 1 )

[node name="Level_Logic" type="Node" parent="."]
script = ExtResource( 1 )

[node name="G_L_Dummy2" parent="." instance=ExtResource( 16 )]
position = Vector2( 556.015, 998.046 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 18 )

[node name="DiscoLight" type="Light2D" parent="."]
position = Vector2( -707.496, -257.341 )
rotation = 1.84358
texture = ExtResource( 6 )
texture_scale = 0.7
energy = 1.1
mode = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="DiscoLight"]
anims/spin = SubResource( 19 )

[node name="DiscoLight2" type="Light2D" parent="."]
position = Vector2( 1868.14, -241.778 )
rotation = -4.24241
texture = ExtResource( 6 )
texture_scale = 0.7
energy = 1.1
mode = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="DiscoLight2"]
anims/spin = SubResource( 20 )

[node name="MovingPlatforms" type="Node2D" parent="."]

[node name="MovingPlatform" parent="MovingPlatforms" instance=ExtResource( 19 )]
position = Vector2( -1050, -250 )

[node name="to_position" parent="MovingPlatforms/MovingPlatform" index="3"]
position = Vector2( 0, 400 )

[node name="MovingPlatform2" parent="MovingPlatforms" instance=ExtResource( 19 )]
position = Vector2( 2250, -250 )

[node name="AnimationPlayer" parent="MovingPlatforms/MovingPlatform2" index="2"]
anims/move_r = SubResource( 21 )

[node name="to_position" parent="MovingPlatforms/MovingPlatform2" index="3"]
position = Vector2( 0, 400 )

[node name="Doors" type="Node2D" parent="."]
z_index = -110

[node name="Door" parent="Doors" instance=ExtResource( 20 )]
position = Vector2( -550, -50 )

[node name="Door2" parent="Doors" instance=ExtResource( 20 )]
position = Vector2( 1750, -50 )

[editable path="MovingPlatforms/MovingPlatform"]

[editable path="MovingPlatforms/MovingPlatform2"]
